--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7",
+    "mongodb": "^6.9.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
