--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,68 +1,31 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/reference/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
 jobs:
-  backend_security:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/guides/execution-managed/executor-intro/ & https://circleci.com/docs/reference/configuration-reference/#executor-job
     docker:
-      - image: cimg/node:18.20
-    working_directory: ~/project
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-backend-{{ checksum "backend/package-lock.json" }}
-            - v1-backend-
-      - run:
-          name: Install backend dependencies
-          command: |
-            cd backend
-            npm ci
-      - save_cache:
-          key: v1-backend-{{ checksum "backend/package-lock.json" }}
-          paths:
-            - backend/node_modules
-      - run:
-          name: Backend lint
-          command: |
-            cd backend
-            npm run lint
-      - run:
-          name: Backend security scan
-          command: |
-            cd backend
-            npm run security-scan
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/base
+      - image: cimg/base:current
 
-  frontend_checks:
-    docker:
-      - image: cimg/node:18.20
-    working_directory: ~/project
+    # Add steps to the job
+    # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#steps-overview & https://circleci.com/docs/reference/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
-      - restore_cache:
-          keys:
-            - v1-frontend-{{ checksum "frontend/package-lock.json" }}
-            - v1-frontend-
       - run:
-          name: Install frontend dependencies
-          command: |
-            cd frontend
-            npm ci
-      - save_cache:
-          key: v1-frontend-{{ checksum "frontend/package-lock.json" }}
-          paths:
-            - frontend/node_modules
-      - run:
-          name: Frontend lint
-          command: |
-            cd frontend
-            npm run lint
-      - run:
-          name: Frontend build
-          command: |
-            cd frontend
-            npm run build
+          name: "Say hello"
+          command: "echo Hello, World!"
 
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
 workflows:
-  build_and_secure:
+  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - backend_security
-      - frontend_checks
+      - say-hello
