--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,11 @@ jobs:
             cd backend
             npm run lint
       - run:
+          name: Backend API smoke tests
+          command: |
+            cd backend
+            npm run test:api
+      - run:
           name: Backend security scan
           command: |
             cd backend
@@ -61,8 +66,37 @@ jobs:
             cd frontend
             npm run build
 
+sonar_scan:
+    docker:
+      - image: sonarsource/sonar-scanner-cli:5
+    working_directory: /usr/src
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies for analysis context
+          command: |
+            cd backend
+            npm ci
+            cd ../frontend
+            npm ci
+      - run:
+          name: Run SonarQube analysis
+          command: |
+            if [ -z "${SONAR_TOKEN}" ] || [ -z "${SONAR_HOST_URL}" ] || [ -z "${SONAR_PROJECT_KEY}" ]; then
+              echo "Skipping SonarQube scan - SONAR_TOKEN/SONAR_HOST_URL/SONAR_PROJECT_KEY not configured.";
+              exit 0;
+            fi
+            sonar-scanner \
+              -Dsonar.projectKey="${SONAR_PROJECT_KEY}" \
+              -Dsonar.host.url="${SONAR_HOST_URL}" \
+              -Dsonar.login="${SONAR_TOKEN}"
+
 workflows:
   build_and_secure:
     jobs:
       - backend_security
       - frontend_checks
+      - sonar_scan:
+          requires:
+            - backend_security
+            - frontend_checks
