--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.sources=backend/src,frontend/src
 sonar.exclusions=**/node_modules/**,**/*.test.js
 sonar.tests=backend/test
 sonar.test.inclusions=backend/test/**/*.test.js
-sonar.javascript.lcov.reportPaths=
+sonar.javascript.lcov.reportPaths=backend/coverage/lcov.info,frontend/coverage/lcov.info
