--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,12 +66,26 @@ jobs:
             cd frontend
             npm run build
 
-  sonar_scan:     
+  sonar_scan:
     docker:
       - image: sonarsource/sonar-scanner-cli:5
     working_directory: /usr/src
     steps:
       - checkout
+      - run:
+          name: Ensure Node.js and npm are available
+          command: |
+            if command -v node >/dev/null 2>&1 && command -v npm >/dev/null 2>&1; then
+              echo "Node.js and npm already installed"
+            elif command -v apt-get >/dev/null 2>&1; then
+              apt-get update
+              apt-get install -y nodejs npm
+            elif command -v apk >/dev/null 2>&1; then
+              apk add --no-cache nodejs npm
+            else
+              echo "Unable to install Node.js and npm: unsupported package manager" >&2
+              exit 1
+            fi
       - run:
           name: Install dependencies for analysis context
           command: |
