--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,28 +13,20 @@ jobs:
             - v1-backend-
       - run:
           name: Install backend dependencies
-          command: |
-            cd backend
-            npm ci
+          command: cd backend && npm ci
       - save_cache:
           key: v1-backend-{{ checksum "backend/package-lock.json" }}
           paths:
             - backend/node_modules
       - run:
           name: Backend lint
-          command: |
-            cd backend
-            npm run lint
+          command: cd backend && npm run lint
       - run:
           name: Backend API smoke tests
-          command: |
-            cd backend
-            npm run test:api
+          command: cd backend && npm run test:api
       - run:
           name: Backend security scan
-          command: |
-            cd backend
-            npm run security-scan
+          command: cd backend && npm run security-scan
 
   frontend_checks:
     docker:
@@ -48,23 +40,17 @@ jobs:
             - v1-frontend-
       - run:
           name: Install frontend dependencies
-          command: |
-            cd frontend
-            npm ci
+          command: cd frontend && npm ci
       - save_cache:
           key: v1-frontend-{{ checksum "frontend/package-lock.json" }}
           paths:
             - frontend/node_modules
       - run:
           name: Frontend lint
-          command: |
-            cd frontend
-            npm run lint
+          command: cd frontend && npm run lint
       - run:
           name: Frontend build
-          command: |
-            cd frontend
-            npm run build
+          command: cd frontend && npm run build
 
   sonar_scan:
     docker:
@@ -73,67 +59,25 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Ensure Node.js and npm are available
+          name: Prepare analysis environment
           command: |
-            if command -v node >/dev/null 2>&1 && command -v npm >/dev/null 2>&1; then
-              echo "Node.js and npm already installed"
-            elif command -v apt-get >/dev/null 2>&1; then
-              apt-get update
-              apt-get install -y nodejs npm
-            elif command -v apk >/dev/null 2>&1; then
-              apk add --no-cache nodejs npm
-            else
-              echo "Unable to install Node.js and npm: unsupported package manager" >&2
-              exit 1
-            fi
-
+            echo "Installing required dependencies for analysis..."
+            apk add --no-cache nodejs npm git || true
+            cd backend && npm ci
+            cd ../frontend && npm ci
       - run:
-          name: Install dependencies for analysis context
+          name: Run SonarCloud analysis
           command: |
-            cd backend
-            npm ci
-            cd ../frontend
-            npm ci
-
-      - run:
-          name: Run SonarQube analysis
-          command: |
-            project_key="${SONAR_PROJECT_KEY:-$(grep -E '^sonar\.projectKey=' sonar-project.properties | cut -d'=' -f2)}"
-            host_url="${SONAR_HOST_URL:-https://sonarcloud.io}"
-            organization="${SONAR_ORGANIZATION:-$(grep -E '^sonar\.organization=' sonar-project.properties | cut -d'=' -f2)}"
-
-                        if [ -n "${organization}" ] && [ -n "${project_key}" ]; then
-              prefix="${organization}_"
-              case "${project_key}" in
-                "${prefix}"*)
-                  ;; # already prefixed
-                *)
-                  project_key="${prefix}${project_key}"
-                  ;;
-              esac
-            fi
-
             if [ -z "${SONAR_TOKEN}" ]; then
-              echo "❌ SONAR_TOKEN is required for authentication. Configure it in CircleCI or supply it when running locally." >&2
+              echo "❌ SONAR_TOKEN missing. Set it under CircleCI → Project Settings → Environment Variables." >&2
               exit 1
             fi
 
-            if [ -z "${project_key}" ]; then
-              echo "❌ Unable to determine sonar.projectKey. Set SONAR_PROJECT_KEY or define it in sonar-project.properties." >&2
-              exit 1
-            fi
-
-            if [ -z "${organization}" ]; then
-              echo "❌ Unable to determine sonar.organization. Set SONAR_ORGANIZATION or define it in sonar-project.properties." >&2
-              exit 1
-            fi
-
-            echo "🚀 Running SonarQube scan for '${project_key}' in organization '${organization}' against '${host_url}'."
-
+            echo "🚀 Running SonarCloud analysis"
             sonar-scanner \
-              -Dsonar.projectKey="${project_key}" \
-              -Dsonar.organization="${organization}" \
-              -Dsonar.host.url="${host_url}" \
+              -Dsonar.projectKey="${SONAR_PROJECT_KEY}" \
+              -Dsonar.organization="${SONAR_ORGANIZATION}" \
+              -Dsonar.host.url="${SONAR_HOST_URL:-https://sonarcloud.io}" \
               -Dsonar.login="${SONAR_TOKEN}"
 
 workflows:
