--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=MikaRyklief_INSY7314-Part2
-sonar.projectName=INSY7314-Part2
+sonar.projectName=mikaryklief
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=backend/src,frontend/src
