--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=MikaRyklief_INSY7314-Part2
 sonar.projectName=mikaryklief
+sonar.organization=mikaryklief
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=backend/src,frontend/src
